# -*- coding: utf-8 -*-
[metadata]
name = phytoplankton_species_classifier
summary = 
description-file =
    README.md
author = Decrop Wout
author-email = wout.decrop@VLIZ.be
version = 0.0.1
license = MIT
home-page = https://github.com/woutdecrop/phytoplankton_species_classifier
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    phytoplankton_species_classifier

[entry_points]
deepaas.v2.model =
    phytoplankton_species_classifier = phytoplankton_species_classifier.api
